Wed Nov  1 18:26:53 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Wrote more of the indexer quickstart document.

Wed Nov  1 13:00:33 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add header guards to btree.h - should fix includetest.

Tue Oct 31 18:23:57 GMT 2000 Olly Betts

	* Encoding of terms changed to a scheme which takes approximately
	  half the space.

Tue Oct 31 18:18:36 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More work on the indexer quickstart document.

Tue Oct 31 18:10:49 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Begun changing implementation of QuartzTable to use btree stuff.
	  Currently doesn't compile.

	* Added quartztest that opening an unavailable revision of a valid
	  database doesn't throw an exception.

	* More updates / corrections to btree_api.txt documentation.

Tue Oct 31 16:25:14 GMT 2000 Olly Betts

	* Fixed a few warnings from gcc.

Tue Oct 31 16:12:46 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmMakePairNode, OmMakePairsNode, OmMakeRangeNode,
	  OmSelectItemsNode

	* OmRegexMatchNode uses empty strings rather than empty data
	  items for unmatched subexpressions.

	* Regex object keeps track of the pattern string

Tue Oct 31 16:12:12 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove argument of Btree_item_create().

	* Add several tests of quartz tables, prior to replacing their
	  implementation with Btree calls.

Tue Oct 31 14:36:08 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove a couple of statics which shouldn't have been there, causing
	  compiler warnings.

Tue Oct 31 14:34:19 GMT 2000 Olly Betts

	* Revised remote protocol to be somewhat less verbose.

Tue Oct 31 14:18:24 GMT 2000 Olly Betts

	* Improved output from test programs.

Tue Oct 31 13:12:15 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Removed QuartzRevisionNumber class - just use the revision number